# bitcoin_history

./: README.md  docker-compose.yml
csv_reader/: Cargo.toml  Dockerfile
csv_reader/src/: main.rs
csvreader/: Dockerfile  package-lock.json  package.json  reader.js
csvreader/db/: postgres.js
dbsrv/: Dockerfile  bitcoin_setup.sql
websrv/: Dockerfile
websrv/api/: package-lock.json  package.json  server.js
websrv/bitcoin-history/: package-lock.json  package.json
websrv/bitcoin-history/public/: index.html
websrv/bitcoin-history/src/: index.js  styles.css
websrv/bitcoin-history/src/components/: App.js
