[package]
name = "csv_reader"
version = "0.1.0"
authors = ["Marshall <marshall_tower@yahoo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
postgres = "0.19.0"